<resources>
    <string name="app_name">wanAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="home">主页</string>
    <string name="knowledge">体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="login">登录</string>
    <string name="number">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="register">注册</string>

    <string name="my_collect">我的收藏</string>
    <string name="aboutme">关于我</string>
    <string name="out_login">退出登录</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="about">牛战士从来不摘下他的面具</string>

    <string name="connect_timeout">连接超时</string>
    <string name="bad_network">网络较差</string>
    <string name="unknown_error">未知情况</string>
    <string name="connect_error">链接异常</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">发现更多干货</string>

</resources>
