<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etlayout_num"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        app:counterEnabled="true"
        app:counterMaxLength="11">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etlayout_psd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etlayout_num"
        android:layout_centerHorizontal="true"
        app:counterEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etlayout_psd"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bt_login"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_bt_register"
            android:text="@string/register"
            android:clickable="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>